--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="body">
+<body>
 
-<div class="container p-3 text-center">
+<div class="container  p-3 text-center">
   <h1>Weather App</h1>
   <div class="m-3 p-3 d-flex justify-content-center search">
     <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 w">
