--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="container  p-3 text-center">
   <h1>Weather App</h1>
   <div class="m-3 p-3 d-flex justify-content-center search">
-    <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 w">
-    <button class=" p-3 martop r2"><img src = "search.jpg" alt="search" class="img-fluid r2" width="26px"/> </button>
+    <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 ">
+    <button class=" p-3 martop r2"><img src = "search.jpg" alt="search" class="img-fluid r2" width="20px"/> </button>
 
   </div>
   <div class="error">
