--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div class="container  p-3 text-center">
   <h1>Weather App</h1>
   <div class="m-3 p-3 d-flex justify-content-center search">
-    <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 ">
+    <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 wa">
     <button class=" p-3 martop r2"><img src = "search.jpg" alt="search" class="img-fluid r2" width="20px"/> </button>
 
   </div>
   <div class="error">
     <h5>invalid City Name</h5>
   </div>
-  <div class = "weather p-3 p-3">
+  <div class = "weather ">
     <img src ="rain.jpg" alt="rain" class="img-fluid Weather-icon p-2" width="200px">
 
 
