--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="error">
     <h5>invalid City Name</h5>
   </div>
-  <div class = "weather ">
+  <div class = "weather p-3 m-3 ">
     <img src ="rain.jpg" alt="rain" class="img-fluid Weather-icon p-2" width="200px">
 
 
