--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<div class="container  p-3 text-center">
+<div class="container-fluid  p-3 text-center">
   <h1>Weather App</h1>
   <div class="m-3 p-3 d-flex justify-content-center search">
     <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 wa">
