--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-<div class="container-fluid  p-3 text-center">
-  <h1>Weather App</h1>
+<div class="container p-3 text-center">
+  <h1 class="p-3 m-3"><strong>Weather App</strong></h1>
   <div class="m-3 p-3 d-flex justify-content-center search">
     <input type="text" placeholder="Enter city name" spellcheck="false " class="round p-3 wa">
     <button class=" p-3 martop r2"><img src = "search.jpg" alt="search" class="img-fluid r2" width="20px"/> </button>
@@ -26,20 +26,20 @@
     <img src ="rain.jpg" alt="rain" class="img-fluid Weather-icon p-2" width="200px">
 
 
-    <h1 class="temp">22°c</h1>
-    <h2 class="city">New York</h2>
+    <h1 class="temp"> <strong>22°c </strong></h1>
+    <h2 class="city"> <strong>New York</strong></h2>
     <div class="m-3 p-3 Details d-flex justify-content-between">
 
 
             <div class="p-2">
               
             <img src="img.jpg" class="img-fluid" width="150px" alt="wind">
-            <h3 class="Wind">15 Km/h</h3> 
-            <h6>Wind Speed</h6></div>
+            <h3 class="Wind"> <strong>15 Km/k</strong></h3> 
+            <h6><strong> Wind Speed</strong> </h6></div>
    
            <div class=" p-2">
             <img src="img3.jpg" class="img-fluid" width="150px" alt="Wind">
-           <h3 class="Humidity ">50%</h3>
+           <h3 class="Humidity "> <strong>50%</strong></h3>
            <h6>Humidity</h6>
     </div>
 </div>
