--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h5>invalid City Name</h5>
   </div>
   <div class = "weather p-3 m-3 ">
-    <img src ="rain.jpg" alt="rain" class="img-fluid Weather-icon p-2" width="200px">
+    <img src ="rain.jpg" alt="rain" class="img-fluid Weather-icon p-2 rrr" width="400px">
 
 
     <h1 class="temp"> <strong>22°c </strong></h1>
@@ -31,14 +31,14 @@
     <div class="m-3 p-3 Details d-flex justify-content-between">
 
 
-            <div class="p-2">
+            <div class="p-2 m-3">
               
-            <img src="img.jpg" class="img-fluid" width="150px" alt="wind">
+            <img src="img.jpg" class="img-fluid rrr" width="150px" alt="wind">
             <h3 class="Wind"> <strong>15 Km/k</strong></h3> 
             <h6><strong> Wind Speed</strong> </h6></div>
    
-           <div class=" p-2">
-            <img src="img3.jpg" class="img-fluid" width="150px" alt="Wind">
+           <div class=" p-2 m-3 ">
+            <img src="img3.jpg" class="img-fluid rrr" width="150px" alt="Wind">
            <h3 class="Humidity "> <strong>50%</strong></h3>
            <h6>Humidity</h6>
     </div>
