--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <div class=" p-2 m-3 ">
             <img src="img3.jpg" class="img-fluid rrr" width="150px" alt="Wind">
            <h3 class="Humidity "> <strong>50%</strong></h3>
-           <h6>Humidity</h6>
+           <h6> <strong> Humidity</strong></h6>
     </div>
 </div>
   </div>
