--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   </div>
   <div class="error">
-    <h5>invalid City Name</h5>
+    <h3 class="p-3 m-3"> <strong>Invalid City Name</strong></h3>
   </div>
   <div class = "weather p-3 m-3 ">
     <img src ="rain.jpg" alt="rain" class="img-fluid Weather-icon p-2 rrr" width="400px">
