--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
             <div class="p-2 m-3">
               
-            <img src="img.jpg" class="img-fluid rrr" width="250px" alt="wind">
+            <img src="img.jpg" class="img-fluid rrr p-3 h"  width="250px" alt="wind">
             <h3 class="Wind"> <strong>15Km/k</strong></h3> 
             <h6><strong> WindSpeed</strong> </h6></div>
    
            <div class=" p-2 m-3 ">
-            <img src="img3.jpg" class="img-fluid rrr" width="250px" alt="Wind">
-           <h3 class="Humidity "> <strong>50%</strong></h3>
+            <img src="img3.jpg" class="img-fluid rrr p-3 h" width="250px" alt="Humidity">
+            <h3 class="Humidity"> <strong>50%</strong></h3>
            <h6> <strong> Humidity</strong></h6>
     </div>
 </div>
